apps/openweb/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openweb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openweb
  template:
    metadata:
      labels:
        app: openweb
      annotations:
        diun.enable: "true"
    spec:
      # Mount the PVC
      volumes:
        - name: openweb-data
          persistentVolumeClaim:
            claimName: openweb-data-claim
      containers:
        - name: openweb
          image: ghcr.io/open-webui/open-webui:0.5.3
          ports:
            - containerPort: 8080
          # Pass the mount into the container
          volumeMounts:
            - mountPath: '/app/backend/data'
              name: openweb-data
      nodeSelector:
        workload: general
