apps/openweb/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openweb
  namespace: default
  labels:
    app: openweb
spec:
  type: NodePort
  ports:
    # Maps the container's port to 80. If you want to use it on a different port, change it here.
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: openweb
