apps/openweb/ts-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openweb-ts
spec:
  defaultBackend:
    service:
      name: openweb
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - openweb
